--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     </ul>
 
     <script>
+        
+        const list = document.querySelector('ul');
+        const userInput = document.querySelector('input');
+        const btn = document.querySelector('button');
+
 
     </script>
   </body>
