Add function for button click

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         const userInput = document.querySelector('input');
         const btn = document.querySelector('button');
 
+        btn.addEventListener('click', () => {
+            const input = userInput;
+            input = "";
+        });
 
     </script>
   </body>
