Create new elements and store in variables

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             input = "";
         });
 
+
+        const listItems = document.createElement('li');
+        const span = document.createElement('span');
+        const btn2 = document.createElement('button');
+
     </script>
   </body>
 </html>
